tests/snapshots/integration__integration_tests__help__help_config_long.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    TERM: alacritty
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config - Manage configuration and shell integration

Usage: [1m[36mwt config[0m [36m[OPTIONS][0m [36m<COMMAND>

[1m[32mCommands:
  [1m[36mshell[0m   Shell integration setup
  [1m[36mcreate[0m  Create configuration file
  [1m[36mshow[0m    Show configuration files & locations
  [1m[36mstate[0m   Manage internal data and cache

[1m[32mOptions:
  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...
          Show debug info (-v), or also write diagnostic report (-vv)

Manages configuration, shell integration, and runtime settings.

[1m[32mExamples

Install shell integration (required for directory switching):

  [2mwt config shell install

Create user config file with documented examples:

  [2mwt config create

Create project config file ([2m.config/wt.toml[0m) for hooks:

  [2mwt config create --project

Show current configuration and file locations:

  [2mwt config show

[1m[32mConfiguration files

        File                 Location                                Contains                     Committed & shared 
   ────────────── ─────────────────────────────── ─────────────────────────────────────────────── ────────────────── 
   User config    ~/.config/worktrunk/config.toml Worktree path template, LLM commit configs, etc ✗                  
   Project config .config/wt.toml                 Project hooks, dev server URL                   ✓                  



[1m[32mWorktrunk User Configuration

Create with [2mwt config create[0m.

Location:

- macOS/Linux: [2m~/.config/worktrunk/config.toml[0m (or [2m$XDG_CONFIG_HOME[0m if set)
- Windows: [2m%APPDATA%\worktrunk\config.toml

[1m[32mWorktree path template

Controls where new worktrees are created. Paths are relative to the repository root.

[1mVariables:

- [2m{{ repo }}[0m — repository directory name
- [2m{{ branch }}[0m — raw branch name (e.g., [2mfeature/auth[0m)
- [2m{{ branch | sanitize }}[0m — filesystem-safe: [2m/[0m and [2m\[0m become [2m-[0m (e.g., [2mfeature-auth[0m)
- [2m{{ branch | sanitize_db }}[0m — database-safe: lowercase, underscores, hash suffix (e.g., [2mfeature_auth_x7k[0m)

[1mExamples[0m for repo at [2m~/code/myproject[0m, branch [2mfeature/auth[0m:

  [2m# Default — siblings in parent directory
  [2m# Creates: ~/code/myproject.feature-auth
  [2mworktree-path = "../{{ repo }}.{{ branch | sanitize }}"
  [2m
  [2m# Inside the repository
  [2m# Creates: ~/code/myproject/.worktrees/feature-auth
  [2mworktree-path = ".worktrees/{{ branch | sanitize }}"
  [2m
  [2m# Namespaced (useful when multiple repos share a parent directory)
  [2m# Creates: ~/code/worktrees/myproject/feature-auth
  [2mworktree-path = "../worktrees/{{ repo }}/{{ branch | sanitize }}"
  [2m
  [2m# Nested bare repo (git clone --bare <url> project/.git)
  [2m# Creates: ~/code/project/feature-auth (sibling to .git)
  [2mworktree-path = "../{{ branch | sanitize }}"

[1m[32mList command defaults

Persistent flag values for [2mwt list[0m. Override on command line as needed.

  [2m[list]
  [2mfull = false       # Show CI status and main…± diffstat columns (--full)
  [2mbranches = false   # Include branches without worktrees (--branches)
  [2mremotes = false    # Include remote-only branches (--remotes)

[1m[32mCommit defaults

Shared by [2mwt step commit[0m, [2mwt step squash[0m, and [2mwt merge[0m.

  [2m[commit]
  [2mstage = "all"      # What to stage before commit: "all", "tracked", or "none"

[1m[32mMerge command defaults

All flags are on by default. Set to false to change default behavior.

  [2m[merge]
  [2msquash = true      # Squash commits into one (--no-squash to preserve history)
  [2mcommit = true      # Commit uncommitted changes first (--no-commit to skip)
  [2mrebase = true      # Rebase onto target before merge (--no-rebase to skip)
  [2mremove = true      # Remove worktree after merge (--no-remove to keep)
  [2mverify = true      # Run project hooks (--no-verify to skip)

[1m[32mSelect command defaults

Pager behavior for [2mwt select[0m diff previews.

  [2m[select]
  [2m# Pager command with flags for diff preview (overrides git's core.pager)
  [2m# Use this to specify pager flags needed for non-TTY contexts
  [2m# Example:
  [2m# pager = "delta --paging=never"

[1m[32mLLM commit messages

Generate commit messages automatically during merge. Requires an external CLI tool. See <https://worktrunk.dev/llm-commits/> for setup details and template customization.

Using llm (install: [2mpip install llm llm-anthropic[0m):

  [2m[commit-generation]
  [2mcommand = "llm"
  [2margs = ["-m", "claude-haiku-4.5"]

Using aichat:

  [2m[commit-generation]
  [2mcommand = "aichat"
  [2margs = ["-m", "claude:claude-haiku-4.5"]

See Custom Prompt Templates for inline template options.

[1m[32mApproved commands

Commands approved for project hooks. Auto-populated when approving hooks on first run, or via [2mwt hook approvals add[0m.

  [2m[projects."github.com/user/repo"]
  [2mapproved-commands = ["npm ci", "npm test"]

For project-specific hooks (post-create, post-start, pre-merge, etc.), use a project config at [2m<repo>/.config/wt.toml[0m. Run [2mwt config create --project[0m to create one, or see <https://worktrunk.dev/hook/>.

[1m[32mCustom prompt templates

Templates use minijinja syntax.

[32mCommit template

Available variables:

- [2m{{ git_diff }}[0m, [2m{{ git_diff_stat }}[0m — diff content
- [2m{{ branch }}[0m, [2m{{ repo }}[0m — context
- [2m{{ recent_commits }}[0m — recent commit messages

Default template:

  [2m[commit-generation]
  [2mtemplate = """
  [2mWrite a commit message for the staged changes below.
  [2m
  [2m<format>
  [2m- Subject under 50 chars, blank line, then optional body
  [2m- Output only the commit message, no quotes or code blocks
  [2m</format>
  [2m
  [2m<style>
  [2m- Imperative mood: "Add feature" not "Added feature"
  [2m- Match recent commit style (conventional commits if used)
  [2m- Describe the change, not the intent or benefit
  [2m</style>
  [2m
  [2m<diffstat>
  [2m{{ git_diff_stat }}
  [2m</diffstat>
  [2m
  [2m<diff>
  [2m{{ git_diff }}
  [2m</diff>
  [2m
  [2m<context>
  [2mBranch: {{ branch }}
  [2m{% if recent_commits %}<recent_commits>
  [2m{% for commit in recent_commits %}- {{ commit }}
  [2m{% endfor %}</recent_commits>{% endif %}
  [2m</context>
  [2m
  [2m"""

[32mSquash template

Available variables (in addition to commit template variables):

- [2m{{ commits }}[0m — list of commits being squashed
- [2m{{ target_branch }}[0m — merge target branch

Default template:

  [2m[commit-generation]
  [2msquash-template = """
  [2mCombine these commits into a single commit message.
  [2m
  [2m<format>
  [2m- Subject under 50 chars, blank line, then optional body
  [2m- Output only the commit message, no quotes or code blocks
  [2m</format>
  [2m
  [2m<style>
  [2m- Imperative mood: "Add feature" not "Added feature"
  [2m- Match the style of commits being squashed (conventional commits if used)
  [2m- Describe the change, not the intent or benefit
  [2m</style>
  [2m
  [2m<commits branch="{{ branch }}" target="{{ target_branch }}">
  [2m{% for commit in commits %}- {{ commit }}
  [2m{% endfor %}</commits>
  [2m
  [2m<diffstat>
  [2m{{ git_diff_stat }}
  [2m</diffstat>
  [2m
  [2m<diff>
  [2m{{ git_diff }}
  [2m</diff>
  [2m
  [2m"""



[1m[32mProject config

The project config defines lifecycle hooks and project-specific settings. This file is checked into version control and shared across the team.

Create [2m.config/wt.toml[0m in the repository root:

  [2m[post-create]
  [2minstall = "npm ci"
  [2m
  [2m[pre-merge]
  [2mtest = "npm test"
  [2mlint = "npm run lint"

See [2mwt hook[0m for complete documentation on hook types, execution order, template variables, and JSON context.

[32mDev server URL

The [2m[list][0m section adds a URL column to [2mwt list[0m:

  [2m[list]
  [2murl = "http://localhost:{{ branch | hash_port }}"

URLs are dimmed when the port isn't listening.

[32mCI platform override

The [2m[ci][0m section overrides CI platform detection for GitHub Enterprise or self-hosted GitLab with custom domains:

  [2m[ci]
  [2mplatform = "github"  # or "gitlab"

By default, the platform is detected from the remote URL. Use this when URL detection fails (e.g., [2mgit.mycompany.com[0m instead of [2mgithub.mycompany.com[0m).



[1m[32mShell integration

Worktrunk needs shell integration to change directories when switching worktrees. Install with:

  [2mwt config shell install

Or manually add to the shell config:

  [2m# For bash: add to ~/.bashrc
  [2meval "$(wt config shell init bash)"
  [2m
  [2m# For zsh: add to ~/.zshrc
  [2meval "$(wt config shell init zsh)"
  [2m
  [2m# For fish: add to ~/.config/fish/config.fish
  [2mwt config shell init fish | source

Without shell integration, [2mwt switch[0m prints the target directory but cannot [2mcd[0m into it.

[32mSkip first-run prompt

On first run without shell integration, Worktrunk offers to install it. Suppress this prompt in CI or automated environments:

  [2mskip-shell-integration-prompt = true

Or via environment variable:

  [2mexport WORKTRUNK_SKIP_SHELL_INTEGRATION_PROMPT=true

[1m[32mEnvironment variables

All user config options can be overridden with environment variables using the [2mWORKTRUNK_[0m prefix.

[32mNaming convention

Config keys use kebab-case ([2mworktree-path[0m), while env vars use SCREAMING_SNAKE_CASE ([2mWORKTRUNK_WORKTREE_PATH[0m). The conversion happens automatically.

For nested config sections, use double underscores to separate levels:

            Config                   Environment Variable         
   ───────────────────────── ──────────────────────────────────── 
   worktree-path             WORKTRUNK_WORKTREE_PATH              
   commit-generation.command WORKTRUNK_COMMIT_GENERATION__COMMAND 
   commit-generation.args    WORKTRUNK_COMMIT_GENERATION__ARGS    

Note the single underscore after [2mWORKTRUNK[0m and double underscores between nested keys.

[32mArray values

Array config values like [2margs = ["-m", "claude-haiku"][0m can be specified as a single string in environment variables:

  [2mexport WORKTRUNK_COMMIT_GENERATION__ARGS="-m claude-haiku"

[32mExample: CI/testing override

Override the LLM command in CI to use a mock:

  [2mWORKTRUNK_COMMIT_GENERATION__COMMAND=echo \
  [2mWORKTRUNK_COMMIT_GENERATION__ARGS="test: automated commit" \
  [2m  wt merge

[32mOther environment variables

               Variable                                                   Purpose                                      
   ───────────────────────────────── ───────────────────────────────────────────────────────────────────────────────── 
   WORKTRUNK_BIN                     Override binary path for shell wrappers (useful for testing dev builds)           
   WORKTRUNK_CONFIG_PATH             Override user config file location                                                
   WORKTRUNK_DIRECTIVE_FILE          Internal: set by shell wrappers to enable directory changes                       
   WORKTRUNK_SHELL                   Internal: set by shell wrappers to indicate shell type (e.g., powershell)         
   WORKTRUNK_MAX_CONCURRENT_COMMANDS Max parallel git commands (default: 32). Lower if hitting file descriptor limits. 
   NO_COLOR                          Disable colored output (standard)                                                 
   CLICOLOR_FORCE                    Force colored output even when not a TTY
