tests/snapshots/integration__integration_tests__help__help_config_shell.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - shell
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
---
success: true
exit_code: 0
----- stdout -----
wt config shell - Shell integration setup
Usage: wt config shell [OPTIONS] <COMMAND>

Commands:
  init     Generate shell integration code
  install  Write shell integration to config files

Options:
  -h, --help
      Print help

Global Options:
  -C <path>
      Change working directory

  --config <path>          
      User config file path

  -v, --verbose
      Show commands and debug info

----- stderr -----
