tests/snapshots/integration__integration_tests__help__help_config_show.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - show
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----
wt config show - Show configuration files & locations
Usage: wt config show [OPTIONS]

Options:
  -h, --help
          Print help (see a summary with '-h')

Global Options:
  -C <path>
          Working directory for this command

      --config <path>
          User config file path

  -v, --verbose
          Show commands and debug info

Shows location and contents of global config ([2m~/.config/worktrunk/config.toml[0m)
and project config ([2m.config/wt.toml[0m).

If a config file doesn't exist, shows defaults that would be used.

----- stderr -----
