tests/snapshots/integration__integration_tests__help__help_list_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - list
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt list - List worktrees and optionally branches
Usage: wt list [OPTIONS]

Options:
      --format <FORMAT>  Output format (table, json) [default: table]
      --branches         Include branches without worktrees
      --remotes          Include remote branches
      --full             Show CI, conflicts, diffs
      --progressive      Show fast info immediately, update with slow info
  -h, --help             Print help (see more with '--help')

Global Options:
  -C <path>            Working directory for this command
      --config <path>  User config file path
  -v, --verbose        Show commands and debug info
