tests/snapshots/integration__integration_tests__help__help_merge_short.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - merge
    - "-h"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt merge - Merge worktree into target branch
Usage: wt merge [OPTIONS] [TARGET]

Arguments:
  [TARGET]  Target branch

Options:
      --no-squash      Skip commit squashing
      --no-commit      Skip commit, squash, and rebase
      --no-remove      Keep worktree after merge
      --no-verify      Skip all project hooks
  -f, --force          Skip approval prompts
      --stage <STAGE>  What to stage before committing [default: all] [possible values: all, tracked, none]
  -h, --help           Print help (see more with '--help')

Global Options:
  -C <path>            Working directory for this command
      --config <path>  User config file path
  -v, --verbose        Show commands and debug info
